[gd_scene load_steps=9 format=3 uid="uid://bkcl57vwjmf07"]

[ext_resource type="Script" path="res://ui/manual/manual.gd" id="1_cwvte"]
[ext_resource type="Texture2D" uid="uid://ph36o52jrb1h" path="res://resources/icons/cross_icon.png" id="1_wtjxg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_emw88"]
bg_color = Color(0.105882, 0.113725, 0.121569, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 2
border_color = Color(0.0431373, 0.0470588, 0.0470588, 1)
border_blend = true
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 1
shadow_size = 4
shadow_offset = Vector2(0, 2)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o8r5l"]
content_margin_left = 12.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.0431373, 0.0470588, 0.0470588, 1)
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 1
shadow_size = 2
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1svj4"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.365432, 0.0764499, 0.0802642, 1)
border_width_top = 8
border_width_bottom = 8
border_color = Color(0.502899, 0.121306, 0.12551, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="ButtonGroup" id="ButtonGroup_xtw3r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3y5qv"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 4.0
content_margin_bottom = 8.0
bg_color = Color(0.0156863, 0.0156863, 0.0156863, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bglcn"]

[node name="ManualContainer" type="PanelContainer"]
offset_right = 518.0
offset_bottom = 527.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_emw88")
script = ExtResource("1_cwvte")

[node name="C" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="V" type="VBoxContainer" parent="C"]
layout_mode = 2

[node name="TitleBar" type="PanelContainer" parent="C/V"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o8r5l")

[node name="H" type="HBoxContainer" parent="C/V/TitleBar"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="C/V/TitleBar/H"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Manual"
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="C/V/TitleBar/H"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_1svj4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1svj4")
icon = ExtResource("1_wtjxg")

[node name="C" type="MarginContainer" parent="C/V"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 0

[node name="H" type="GridContainer" parent="C/V/C"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 2

[node name="SceneButton" type="Button" parent="C/V/C/H"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_xtw3r")
text = "Scene"
icon_alignment = 1

[node name="MessagesButton" type="Button" parent="C/V/C/H"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_xtw3r")
text = "Messages"
icon_alignment = 1

[node name="EditModesButton" type="Button" parent="C/V/C/H"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_xtw3r")
text = "Edit Modes"
icon_alignment = 1

[node name="InstanceModesButton" type="Button" parent="C/V/C/H"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_xtw3r")
text = "Instance Modes"
icon_alignment = 1

[node name="CampaignTabsButton" type="Button" parent="C/V/C/H"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_xtw3r")
text = "Campaign Tabs"
icon_alignment = 1

[node name="C2" type="PanelContainer" parent="C/V"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_3y5qv")

[node name="V" type="VBoxContainer" parent="C/V/C2"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="C/V/C2/V"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_bglcn")
bbcode_enabled = true
context_menu_enabled = true
selection_enabled = true
